[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/title_page.png" type="Texture" id=2]
[ext_resource path="res://Menus/Assets/quit.PNG" type="Texture" id=3]
[ext_resource path="res://Menus/Assets/start.PNG" type="Texture" id=4]
[ext_resource path="res://Menus/Assets/credits.PNG" type="Texture" id=5]
[ext_resource path="res://Art/title_label.PNG" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.0784314, 0.0784314, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 296.0
margin_top = -26.0
margin_right = 1142.0
margin_bottom = 542.0
rect_scale = Vector2( 0.840002, 0.88 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = 105.0
margin_right = -63.0
margin_bottom = 372.0

[node name="StartButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 216.0
margin_bottom = 88.0
icon = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 92.0
margin_right = 216.0
margin_bottom = 179.0
icon = ExtResource( 3 )

[node name="CreditsButton" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 183.0
margin_right = 216.0
margin_bottom = 267.0
icon = ExtResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 407.0
margin_top = 176.0
margin_right = 884.0
margin_bottom = 270.0
texture = ExtResource( 6 )

[connection signal="pressed" from="TextureRect/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
